--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 
-
+/* 
 
 /*----------------------
         Main Styles
 ----------------------*/
 
-html {
+/* html {
     background-color: #0b2e70;
     color: #0b2e70;
 }
@@ -29,4 +29,4 @@ h1 {
 }
 .content {
     padding: 2%;
-}
+} */ */
